crates/infinity-agent-cli/tests/snapshots/e2e_daemon_tui__e2e_model_picker.snap
---
source: crates/infinity-agent-cli/tests/e2e_daemon_tui.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread 00000000-0000-4000-8000-000000000001                 │
│Neither local nor user RAP configs exist, using empty config                    │
│> hello                                                                         │
│from model one                                                                  │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ mock       Mock Model                 100k ctx                                 │
│ mock2      Second Model               200k ctx                                 │
│                                                                                │
│↑↓ navigate  enter select  esc cancel              mock: Mock Model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=12 col=14 (hidden)
